create Three Body class

--- a/2/2_Hamiltonian dynamics.ipynb
+++ b/2/2_Hamiltonian dynamics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 263,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 264,
    "metadata": {
     "collapsed": true
    },
@@ -39,176 +39,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "r0 = 0 #sun fixed in origin\n",
-    "m0 = 1 #solar mass\n",
-    "R_01 = 1 #AU sun–earth distance\n",
-    "G = 4 * np.pi**2 # (AU^3)*(m_s^-1)*(yr^−2) gravitational constant \n",
-    "\n",
-    "T1 = 1 #yr earth year\n",
-    "m1 = 3*10**-6 #mass of earth\n",
-    "\n",
-    "T2 = 27.3/365.3 #yr moon’s orbital period\n",
-    "m2 = 3.69*10**-8 #mass of moon\n",
-    "R_12 = 2.57*10**-3 #AU earth-moon distance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def force(ri, rj, mi, mj, mk):\n",
-    "    return -G*(mj*mi*(ri)/(np.linalg.norm(ri)**3)) - G*(mk*mi*(rj)/(np.linalg.norm(rj)**3)) #change it to self.G"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hamiltonian(r1, r2, p1, p2):\n",
-    "    r = [[0, 0], r1, r2]\n",
-    "    p = [[0, 0], p1, p2]\n",
-    "    m = [1, m1, m2]\n",
+    "class ThreeBody:\n",
+    "    def __init__(self):\n",
+    "        self.G = 4 * np.pi**2 # (AU^3)*(m_s^-1)*(yr^−2) gravitational constant \n",
+    "        # -- SUN --\n",
+    "        self.r0 = 0 #sun fixed in origin\n",
+    "        self.m0 = 1 #solar mass\n",
+    "        self.R_01 = 1 #AU sun–earth distance\n",
+    "        # -- EARTH --\n",
+    "        self.T1 = 1 #yr earth year\n",
+    "        self.m1 = 3*10**-6 #mass of earth\n",
+    "        # -- MOON --\n",
+    "        self.T2 = 27.3/365.3 #yr moon’s orbital period\n",
+    "        self.m2 = 3.69*10**-8 #mass of moon\n",
+    "        self.R_12 = 2.57*10**-3 #AU earth-moon distance\n",
+    "        \n",
+    "        self.energy = []\n",
+    "        self.angular = []\n",
+    "        self.time = []\n",
+    "        self.solution = None\n",
+    "        \n",
+    "    def __initial_conditions(self):\n",
+    "        r_00 = [0, 0]\n",
+    "        r_01 = [self.R_01, 0]\n",
+    "        r_02 = [self.R_01 + self.R_12, 0]\n",
     "\n",
-    "    part1 = []\n",
-    "    for i in range(len(r)):\n",
-    "        part1.append(np.dot(p[i], p[i])/(2*m[i]))\n",
-    "    part2 = []\n",
-    "    for j in range(len(r)):\n",
-    "        for k in range(len(r)):\n",
-    "            if j < k:\n",
-    "                part2.append((m[j]*m[k] / np.linalg.norm(r[j]-r[k]))*-G)\n",
-    "    return np.sum(part1) + np.sum(part2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def angular_momentum(r1, r2, p1, p2):\n",
-    "    return np.linalg.norm(np.cross(r1, p1) + np.cross(r2, p2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def deriv(t, X):\n",
-    "    Y[:6] = X[6:]\n",
+    "        v_00 = [0, 0]\n",
+    "        v_01 = [0, self.R_01*2*np.pi/self.T1]\n",
+    "        v_02 = [0, self.R_01*2*np.pi/self.T1 + self.R_12*2*np.pi/self.T2]\n",
     "\n",
-    "    r01, r02, r12 = X[2:4]-X[0:2], X[4:6]-X[0:2], X[2:4]-X[4:6]\n",
-    "    F1 = force(r01, r12, m1, m0, m2)\n",
-    "    F2 = force(r02, -r12, m2, m0, m1)\n",
+    "        return np.array(r_00 + r_01 + r_02 + v_00 + v_01 + v_02)\n",
     "    \n",
-    "    Y[6:8] = [0, 0]\n",
-    "    Y[8:10] = np.array(F1/m1)\n",
-    "    Y[10:] =  np.array(F2/m2)\n",
+    "    def __force(self, ri, rj, mi, mj, mk):\n",
+    "        return -self.G*(mj*mi*(ri)/(np.linalg.norm(ri)**3)) - self.G*(mk*mi*(rj)/(np.linalg.norm(rj)**3))\n",
     "    \n",
-    "    time.append(t)\n",
-    "    energy.append(hamiltonian(X[2:4], X[4:6], F1, F2))\n",
-    "    angular.append(angular_momentum(X[2:4], X[4:6], F1, F2))\n",
+    "    def __hamiltonian(self, r1, r2, p1, p2):\n",
+    "        r = [[0, 0], r1, r2]\n",
+    "        p = [[0, 0], p1, p2]\n",
+    "        m = [1, self.m1, self.m2]\n",
+    "\n",
+    "        part1 = []\n",
+    "        for i in range(len(r)):\n",
+    "            part1.append(np.dot(p[i], p[i])/(2*m[i]))\n",
+    "            \n",
+    "        part2 = []\n",
+    "        for j in range(len(r)):\n",
+    "            for k in range(len(r)):\n",
+    "                if j < k:\n",
+    "                    part2.append((m[j]*m[k] / np.linalg.norm(r[j]-r[k]))*-self.G)\n",
+    "        return np.sum(part1) + np.sum(part2)\n",
     "    \n",
-    "    return np.array(Y)"
+    "    def __angular_momentum(self, r1, r2, p1, p2):\n",
+    "        return np.linalg.norm(np.cross(r1, p1) + np.cross(r2, p2))\n",
+    "    \n",
+    "    def __deriv(self, t, X):\n",
+    "        Y = np.zeros_like(X)\n",
+    "        Y[:6] = X[6:]\n",
+    "\n",
+    "        r01, r02, r12 = X[2:4]-X[0:2], X[4:6]-X[0:2], X[2:4]-X[4:6]\n",
+    "        F1 = force(r01, r12, self.m1, self.m0, self.m2)\n",
+    "        F2 = force(r02, -r12, self.m2, self.m0, self.m1)\n",
+    "\n",
+    "        Y[6:8] = [0, 0]\n",
+    "        Y[8:10] = np.array(F1/self.m1)\n",
+    "        Y[10:] =  np.array(F2/self.m2)\n",
+    "\n",
+    "        self.time.append(t)\n",
+    "        self.energy.append(hamiltonian(X[2:4], X[4:6], F1, F2))\n",
+    "        self.angular.append(angular_momentum(X[2:4], X[4:6], F1, F2))\n",
+    "\n",
+    "        return np.array(Y)\n",
+    "    \n",
+    "    def solve(self, t_span, t_eval):\n",
+    "        X0 = self.__initial_conditions()\n",
+    "        \n",
+    "        self.solution = integrate.solve_ivp(self.__deriv, t_span, X0, t_eval=t_eval)\n",
+    "        return self.solution\n",
+    "    \n",
+    "    def plot_info(self):\n",
+    "        return self.energy, self.angular, self.time\n",
+    "    \n",
+    "    def trajectories(self):\n",
+    "        x0, x1, x2 = self.solution.y[:6].reshape(3,2,-1)\n",
+    "        return x0, x1, x2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "r_00 = [0, 0]\n",
-    "r_01 = [R_01, 0]\n",
-    "r_02 = [R_01 + R_12, 0]\n",
-    "\n",
-    "# v = p/m\n",
-    "v_00 = [0, 0]\n",
-    "v_01 = [0, R_01*2*np.pi/T1]\n",
-    "v_02 = [0, R_01*2*np.pi/T1 +R_12*2*np.pi/T2]\n",
-    "\n",
-    "X0 = np.array(r_00 + r_01 + r_02 + v_00 + v_01 + v_02)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "t_span = [0, 0.3] #yr\n",
-    "\n",
-    "def solve(t_eval):\n",
-    "    Y = np.zeros_like(X0)\n",
-    "    energy = []\n",
-    "    angular = []\n",
-    "    time = []\n",
-    "    solution = integrate.solve_ivp(deriv, t_span, X0, t_eval=t_eval)\n",
-    "    return energy, angular, time, solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-232-b95aeeaa2d6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mdt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mt_eval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0menergy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mangular\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_eval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menergy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mangular\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolution\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-231-e9e36c63cf1a>\u001b[0m in \u001b[0;36msolve\u001b[0;34m(t_eval)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mangular\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mtime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0msolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mintegrate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve_ivp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mderiv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_span\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt_eval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mt_eval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0menergy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mangular\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolution\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.6/site-packages/scipy/integrate/_ivp/ivp.py\u001b[0m in \u001b[0;36msolve_ivp\u001b[0;34m(fun, t_span, y0, method, t_eval, dense_output, events, vectorized, **options)\u001b[0m\n\u001b[1;32m    453\u001b[0m         \u001b[0mmethod\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMETHODS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    454\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 455\u001b[0;31m     \u001b[0msolver\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvectorized\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvectorized\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    456\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    457\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mt_eval\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.6/site-packages/scipy/integrate/_ivp/rk.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, fun, t0, y0, t_bound, max_step, rtol, atol, vectorized, **extraneous)\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_step\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate_max_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_step\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0matol\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate_tol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    100\u001b[0m         self.h_abs = select_initial_step(\n\u001b[1;32m    101\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfun\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.6/site-packages/scipy/integrate/_ivp/base.py\u001b[0m in \u001b[0;36mfun\u001b[0;34m(t, y)\u001b[0m\n\u001b[1;32m    137\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnfev\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 139\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfun_single\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    141\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfun\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfun\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.6/site-packages/scipy/integrate/_ivp/base.py\u001b[0m in \u001b[0;36mfun_wrapped\u001b[0;34m(t, y)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfun_wrapped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mfun_wrapped\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-229-07943f4d8f1a>\u001b[0m in \u001b[0;36mderiv\u001b[0;34m(t, X)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mY\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mF2\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mm2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0menergy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhamiltonian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mangular\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mangular_momentum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mF2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
-     ]
-    }
-   ],
    "source": [
     "n = [3, 4, 5]\n",
-    "energies = []\n",
-    "angulars = []\n",
-    "times = []\n",
-    "soultions = []\n",
+    "t_span = [0, 0.3] #yr\n",
+    "trajectories = []\n",
+    "plot_info = []\n",
     "\n",
     "for i in range(len(n)):\n",
-    "    dt = 4**-i\n",
+    "    dt = 4**-n[i]\n",
     "    t_eval = np.linspace(0, 0.3, int(0.3/dt)+1)\n",
-    "    energy, angular, time, solution = solve(t_eval)\n",
-    "    print(energy, angular, time, solution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x0, x1, x2 = sol.y[:6].reshape(3,2,-1)"
+    "    \n",
+    "    tb = ThreeBody()\n",
+    "    solution = tb.solve(t_span, t_eval)\n",
+    "    traj = tb.trajectories()\n",
+    "    trajectories.append({'sun': traj[0],\n",
+    "                        'earth': traj[1],\n",
+    "                        'moon': traj[2],\n",
+    "                        'n': n[i]})\n",
+    "    info = tb.plot_info()\n",
+    "    plot_info.append({'energy': info[0],\n",
+    "                     'angular': info[1],\n",
+    "                     'time': info[2]})"
    ]
   },
   {
@@ -296,24 +241,6 @@
     "plt.plot(x2[0]-x1[0], x2[1]-x1[1], 'b')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
