--- a/7/7_Stochastic_matrices.ipynb
+++ b/7/7_Stochastic_matrices.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "#### Stationary distribution of the Markov chain: \n",
     "The one which belongs to eigenvalue: $\\lambda_1 = 1 \\quad \\vec{u_1} = (0, 0, 0, 0, 1)$\n",
-    "* The stationary distribution is state five; which means i==j the cat and the mouse are in the same box"
+    "* The stationary distribution is state five; which means $i==j$ the cat and the mouse are in the same box"
    ]
   },
   {
